много всяких изменений и новых фаилов

--- a/views/a_index.erb
+++ b/views/a_index.erb
@@ -5,9 +5,10 @@
 <p><%= @denied %></p>
 
 <form action="/" method="POST"> <!-- Форма для метода post на странице по адресу '/' через нее отправляем данные на наш сервер -->
+  <!-- action="/"  - говорит куда будут отправляться данные -->
 
   <input type="text" name="aaa"> <!-- Данные введенные в это поле обозначаются значением атрибута name -->
   <input type="password" name="bbb">
-  <input type="submit"> <!-- активизирует пост запрос и соответсвенно все действия заданные методом post в рубифаиле -->
+  <input type="submit"> <!-- активизирует пост запрос и соответсвенно post обработчик с адресом фомы его обрабатывает -->
 
 </form>
