--- a/views/a_index.erb
+++ b/views/a_index.erb
@@ -5,7 +5,7 @@
 <p><%= @denied %></p>
 
 <form action="/" method="POST"> <!-- Форма для метода post на странице по адресу '/' через нее отправляем данные на наш сервер -->
-  <!-- action="/"  - говорит куда будут отправляться данные -->
+  <!-- action="/"  - говорит куда(в какой обработчик) будут отправляться данные -->
 
   <input type="text" name="aaa"> <!-- Данные введенные в это поле обозначаются значением атрибута name -->
   <input type="password" name="bbb">
