--- a/views/barbershop_contacts.erb
+++ b/views/barbershop_contacts.erb
@@ -10,6 +10,6 @@
   <label>Ваше сообщение</label><br>
   <textarea name="user_message"><%= @user_message %></textarea><br> <!-- тут ранее введенное значение ставим уже в тело тега -->
 
-  <button type="submit" class="btn btn-primary">Отправить данные</button>
+  <button type="submit">Отправить данные</button>
 
 </form>
