--- a/views/layout.erb
+++ b/views/layout.erb
@@ -1,5 +1,3 @@
-<!-- layout.erb - это базовая страница/шаблон, имя зарезервировано. Он будет всегда использоваться Синатрой по умолчанию и добавлять параметр метода erb в точку yield -->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,6 +6,7 @@
     <link href="/barbershop_styles.css" rel="stylesheet" media="all">
   	<!-- /barbershop_styles.css  - используем относительный путь от корня сайта(папка public тоже как корень) -->
     <!-- main.css - так нельзя называть, лучше - styles.css -->
+    <!-- Очистите кэш страницы если не реагиркует на изменения в css фаиле - ctrl + shift + R -->
   </head>
   <body>
 
