--- a/views/leprosorium_index.erb
+++ b/views/leprosorium_index.erb
@@ -1,6 +1,7 @@
 <h2>Latest Posts</h2>
 <br>
 
+<!-- Данные из каждого поста -->
 <% @results.each do |row| %>
 	<p>
 		<h4>Post №<%= row['id'] %></h4> <!-- Выводим номер поста -->
