--- a/views/barbershop_showusers_b.erb
+++ b/views/barbershop_showusers_b.erb
@@ -2,7 +2,7 @@
 
 <%= @results %> <!-- пример вывода объекта запроса(при выводе всего объекта в html к массиву хэшей применяется метод .to_s похоже) -->
 
-
+<!-- Мб не лучшее решение тк длинные(больше 7 ?) хэши не гарантируют порядок -->
 <table border="1" width="1100px" style="font-size: 2rem;">
   <caption>Таблица 1:  Все колонки</caption>
   <thead>
