--- a/views/hq_barbershop_visit_true.erb
+++ b/views/hq_barbershop_visit_true.erb
@@ -4,7 +4,7 @@
 
 	<label>Ваше имя</label><br>
 	<input type="text" name="client[name]" value="<%= @c.name %>"><br>
-  <!-- client[name] - где name это название столбца в миграции и таблице -->
+  <!-- client[name] - где name это название столбца в миграции и таблице а client произвольно выбранное слово -->
 	<!-- @c.name - заполняем value при помощи активрекордс, где метод имя колонки -->
 
 	<label>Ваш телефон</label><br>
