--- a/views/layout.erb
+++ b/views/layout.erb
@@ -5,8 +5,9 @@
     <title>layout</title>
     <link href="/barbershop_styles.css" rel="stylesheet" media="all">
   	<!-- /barbershop_styles.css  - используем относительный путь от корня сайта(папка public тоже как корень) -->
-    <!-- main.css - так нельзя называть, лучше - styles.css -->
-    <!-- Очистите кэш страницы если не реагиркует на изменения в css фаиле - ctrl + shift + R -->
+    <!-- main.css - так нельзя называть ??, лучше - styles.css -->
+    <!-- Очистите кэш страницы если не реагиркует на изменения в css фаиле - ctrl + shift + R (Mac: cmd + shift + r)-->
+    <script src="/pizzashop.js"></script>
   </head>
   <body>
 
