дополнение и перераспределение нумерации

--- a/views/pizzashop_index.erb
+++ b/views/pizzashop_index.erb
@@ -10,11 +10,14 @@
 			<div>Size: <%= pizza.size %> cm</div>
 			<div>Price: <%= pizza.price %> rub</div>
 			<div>
-				<button onclick="addToCart(<%= pizza.id %>)">Add to cart</button> <!-- Вставляем pizza.id в значение параметра функции. При нажатии увеличиваем в localstorage значение колличества конкретного продукта -->
+				<button onclick="addToCart(<%= pizza.id %>)">Add to cart</button> <!-- Вставляем значение pizza.id в значение параметра функции. При нажатии увеличиваем в localstorage значение колличества конкретного продукта -->
 			</div>
     <% end %>
 </div>
 
+
+
+<!--                                           Для layout -->
 
 <!-- Кнопка и поле для отправки данных о заказах(на уроке делали в шапке в виде layout). Существует много способов реализации такого функционала, но тут делаем самый простой вариант -->
 <div>
@@ -29,8 +32,7 @@
 
 </div>
 
-
-<!-- Нужно если форма выше находится в layout(но сам этот код ниже все равно будет написан тут в index) -->
+<!-- Нужно если форма выше находится в layout, соотв и скрипт переносим в layout, чтобы работало на всех страницах -->
 <!-- Чтобы при обновлении страницы данные 'product_1=5,product_2=4,product_3=6,' в поле <input type="text" name="orders" id="orders_input"> и колличество товаров в имени кнопки тоже обновлялись и вставлялись в значения поля/кнопки  -->
 <script>
   $(function() {
