--- a/views/barbershop_index.erb
+++ b/views/barbershop_index.erb
@@ -11,7 +11,7 @@
 	<input type="text" name="phone" value="<%= @phone %>"><br>
 
 	<label>Когда вас ждать?</label><br>
-	<input type="datetime-local" name="date_time" value="<%= @date_time %>"><br> <!-- в value переменная вставляется аналогично и для поля datetime-local, а незаполненное тоже считается пустой сторокой -->
+	<input type="datetime-local" name="date_time" value="<%= @date_time %>"><br> <!-- в value переменная вставляется аналогично и для поля datetime-local, а незаполненное тоже считается пустой строкой -->
 
 	<label>Ваш парикмахер:</label><br>
 	<select name="barber">
