--- a/views/pizzashop_index.erb
+++ b/views/pizzashop_index.erb
@@ -36,8 +36,8 @@
 <!-- Чтобы при обновлении страницы данные 'product_1=5,product_2=4,product_3=6,' в поле <input type="text" name="orders" id="orders_input"> и колличество товаров в имени кнопки тоже обновлялись и вставлялись в значения поля/кнопки  -->
 <script>
   $(function() {
-    update_orders_input();
-    update_orders_button();
+    updateOrdersInput();
+    updateOrdersButton();
   });
 </script>
 
