--- a/views/pizzashop_order_plased.erb
+++ b/views/pizzashop_order_plased.erb
@@ -3,7 +3,7 @@
 
 
 
-<!-- Скрипт для очистки корзины(кнопка сама обновится так этот скрипт в лэйаут будет выше, еслиб была ниже добавили бы обновляющие функции тоже) -->
+<!-- Скрипт для очистки корзины(кнопка сама обновится так этот скрипт в лэйаут будет выше скрипта обновления, еслиб была ниже добавили бы обновляющие функции тоже) -->
 <script>
   $(function() {
     window.localStorage.clear();
