--- a/Rails/views/articles/edit.html.erb
+++ b/Rails/views/articles/edit.html.erb
@@ -3,12 +3,10 @@
 <!--                                      Форма для редактирования сущности -->
 
 <%= form_for :article, url: article_path(@article), method: :patch do |f| %>
-  <!-- автоматически подставляет в значения полей данные соотв столбцов из сущности присвоеннной в переменную тут @article -->
+  <!-- article_path(@article) - при помощи сущности из переменной @article перенаправляет форму на URL /articles/id(в POST метод update), по умолчанию форма отправляласть на /articles те в метод(POST) create -->
 
-  <!-- article_path(@article) - при помощи сущности из переменной @article перенаправляет форму в метод(POST) update(/articles/id), тк по умолчанию форма отправляласть на \articles те в метод(POST) create -->
-
-  <!-- method: :patch (method: :put) - создаем скрытое текстовое поле, чтобы Рэилс понял что это метод PUT/PATCH -->
-  <!-- Браузер может отправлять только через GET или POST других методов(PUT/DELETE) для него не существует. Но это можно обойти(workaround), создав скрытое поле которое добавит метод PUT/PATCH или DELETE -->
+  <!-- method: :patch (альтер method: :put) - создает скрытое текстовое поле, чтобы Рэилс понял что это метод PUT/PATCH -->
+  <!-- Браузер может отправлять только через GET или POST, других методов(PUT/DELETE) для него не существует. Но это можно обойти(workaround), создав скрытое поле которое добавит метод PUT/PATCH или DELETE -->
   <input type="hidden" name="_method" value="patch" autocomplete="off" /> <!-- Это скрытое поле добавлено Rails автоматически -->
   <!-- Данные будут отправляться методом POST, но Рэилс увидит скрытое поле  -->
 
@@ -16,6 +14,7 @@
 
   <!-- В этой форме почемуто не нужно data: {turbo:false} ??  -->
 
+  <!-- автоматически подставляет в значения полей данные соотв столбцов из сущности(БД) присвоеннной в переменную тут @article -->
   <p>
     <%= f.label :title %>
     <%= f.text_field :title %>
