--- a/views/a_index.erb
+++ b/views/a_index.erb
@@ -9,6 +9,6 @@
 
   <input type="text" name="aaa"> <!-- Данные введенные в это поле обозначаются значением атрибута name -->
   <input type="password" name="bbb">
-  <input type="submit"> <!-- активизирует пост запрос и соответсвенно post обработчик с адресом фомы его обрабатывает -->
+  <input type="submit"> <!-- активизирует пост запрос и отправляет данные и соответсвенно post обработчик с адресом фомы его обрабатывает -->
 
 </form>
