--- a/views/pizzashop_cart.erb
+++ b/views/pizzashop_cart.erb
@@ -47,7 +47,7 @@
 	    <input name="client[products]" type="hidden" value="<%= @order_code %>">
 			<!-- Мб передавать сюда из JS ?? но тут не нужно тк нет кнопок отмены заказа -->
 
-		 	<button type="submit" class="btn btn-primary">Подтвердить</button>
+		 	<button type="submit">Подтвердить</button>
 
 			<!-- Для очистки козины на странице подтвержден. И для очиски информации об отмененном заказе. -->
 		 	<button onclick="canselOrder()" type="button">Cancel</button>
