--- a/Rails/views/articles/create.html.erb
+++ b/Rails/views/articles/create.html.erb
@@ -3,9 +3,10 @@
 
 <!--                                   Cсылка на список статей(index) -->
 
-<!-- Обычно Так не делают, тк это хардкод, если мы чтото поменяем в маршрутах, то ссылка останется старой -->
-<a href="/articles">Показать все статьи</a>
+<!-- Обычно так не делают, тк это хардкод, если мы чтото поменяем в маршрутах, то ссылка останется старой -->
+<a href="/articles">Show all articles</a>
 
 <!-- Правильный синтаксис ссылки для Рэилс: -->
 <%= link_to "Show all articles", articles_path %>
+<!-- articles_path - относительный URL на корневую директорию контроллера articles те '/articles' -->
 <!-- Получится та же ссылка что и выше, но когда мы поменяем маршруты в routes.rb то и путь, находящийся в переменной articles_path, в ссыдке изменится -->
