--- a/Rails/views/articles/index.html.erb
+++ b/Rails/views/articles/index.html.erb
@@ -1,5 +1,6 @@
 <h1>List of articles</h1>
 
+<!--                                       Вывод всех статей -->
 <% @articles.each do |article| %>
   <h3><%= article.title %></h3>
   <p><%= article.text %></p>
@@ -10,19 +11,27 @@
   <!-- https://guides.rubyonrails.org/routing.html#path-and-url-helpers  - _path методы -->
 
   <!--                   Ссылки на просмотр и редактирование статьи при помощи синтаксиса Rails -->
-  <p><%= link_to  "Show article", article_path(article) %></p>
+  <p><%= link_to "Show article", article_path(article) %></p>
   <!-- <a href="/articles/2">Show article</a> -->
   <!-- article_path(article) - параметром в метод передается сущность article, в итоге перейдет на /articles/id -->
-  <p><%= link_to  "Edit article", edit_article_path(article) %></p>
+  <p><%= link_to "Edit article", edit_article_path(article) %></p>
   <!-- <a href="/articles/2/edit">Edit article</a> -->
   <!-- edit_article_path(article) - в итоге перейдет на /articles/id/edit -->
 
-  <!--                  Ссылка на удаление статьи -->
-  <p><%= button_to  "Destroy", article_path(article), method: :delete, data: { confirm: 'Действительно удалить?'} %></p>
+  <!--                  Ссылка/кнопка на удаление статьи -->
+  <p><%= button_to "Destroy", article_path(article), method: :delete, data: { confirm: 'Действительно удалить?'} %></p>
   <!-- button_to - для кнопки удаления вместо ссылки удаления link_to, тк на Rails версии 7+ вероятен баг - не удаляется статья (из браузера). Это происходит из-за того, что в Rails 7 отключен UJS. -->
-  <!-- <a rel="nofollow" data-method="delete" href="/articles/2">Destroy article</a> -->
-  <!-- <form class="button_to" method="post" action="/articles/1"><input type="hidden" name="_method" value="delete" autocomplete="off" /><button type="submit">Destroy article</button> -->
+    <!-- Ссылка выглядит так(не добавляет форму): -->
+      <!-- <a data-confirm="Действительно удалить?" rel="nofollow" data-method="delete" href="/articles/1">Destroy article</a> -->
+    <!-- Кнопка выглядит так(добавляет форму): -->
+      <!--
+      <form class="button_to" method="post" action="/articles/2">
+        <input type="hidden" name="_method" value="delete" autocomplete="off" />
+        <button data-confirm="Действительно удалить?" type="submit">Destroy article</button>
+        <input type="hidden" name="authenticity_token" value="Y0qY_ENmVXJ7z4K_OYyKaiOg3gx8jhUYz2I_KbncWglxBV2UvuNZBx5WpukCF8JYVWwtOUkUvsnm8QdzGPLRsg" autocomplete="off" />
+      </form> -->
   <!-- data: { confirm: 'Действительно удалить?'} - необязательный элемент c окном подтверждения -->
+
   <!-- data-method="delete" - кастомный атрибут Рэилс
     data-some_name атрибуты нужны для того чтобы мы могли создать собственные атрибуты(some_name - на выбор). html-валидатор будет знать что это кастомный атрибут, браузер их не обрабатыает
     Файл turbolinks через скрипт обрабатывает атрибуты data-* встречающиеся в коде html
