--- a/Rails/views/articles/edit.html.erb
+++ b/Rails/views/articles/edit.html.erb
@@ -14,7 +14,7 @@
 
   <!-- В этой форме почемуто не нужно data: {turbo:false} ??  -->
 
-  <!-- автоматически подставляет в значения полей данные соотв столбцов из сущности(БД) присвоеннной в переменную тут @article -->
+  <!-- автоматически подставляет в значения полей данные соотв столбцов из сущности(БД) присвоеннной в переменную тут @article(Делается по умолчанию если имя переменной == имени в фрм билдере ??) -->
   <p>
     <%= f.label :title %>
     <%= f.text_field :title %>
