--- a/Rails/views/articles/show.html.erb
+++ b/Rails/views/articles/show.html.erb
@@ -4,17 +4,17 @@
 <p><%= @article.text %></p>
 
 
-<!--                                          Форма для комментариев -->
+<!--                                          Форма для комментариев 1(обычная) -->
 
 <!-- По умолчанию URL формы будет '/articles/id'(show), но нам нужен '/articles/:article_id/comments', можно поменять вручную, но так делать не рекомендуется -->
 
-<!-- Потому нужно использовать такой синтаксис со связью сущностей  -->
+<!-- Потому для настройки нужного URL нужно использовать такой синтаксис со связью сущностей  -->
 <%= form_for([@article, @comment]) do |f| %>
 <% end %>
 <!-- но у нас нет переменной @comment в контроллере articles#show get '/articles/id' из которого и возвращается представление с формой -->
 
 <!-- Тк нет переменной @comment используем метод build -->
-<!-- У нас есть коллекция(тут @article.comments). Если применить к этой коллекции метод build, то создастся новый объект Comment, все поля котого будут пустыми, за исключением aricle_id, соответсвующего @article, те привязан к нашей статье. Этот объект пока не будет сохранен, но его будет достаточно для создания нужного URL для form_for -->
+<!-- У нас есть коллекция(тут @article.comments). Если применить к этой коллекции метод build, то создастся новый объект Comment, все поля которого будут пустыми, за исключением aricle_id, соответсвующего @article, те привязан к нашей статье. Этот объект пока не будет сохранен, но его будет достаточно для создания нужного URL для form_for -->
 <%= form_for([@article, @article.comments.build]) do |f| %>
   <!-- Теперь у нас есть нужный URL '/articles/:article_id/comments' в атрибуте action -->
 
@@ -31,6 +31,29 @@
 
 <% end %>
 
+<!--                                          Форма для комментариев 2 (Devise: username) -->
+
+<!-- 2-1. Мой мутный вариант, где изменяется форма вместо добавления параметра value в нужное поле -->
+<%= form_for([@article, @article.comments.new(:author => current_user.username)]) do |f| %>
+<!-- Вместо создания временной сущности комментария только с article_id создаем временную сущность с заполненным полем username(заполненные поля автоматически заполняются и в форме) методом new вместо build. Теперь поле author получает значение value с именем пользователя -->
+<% end %>
+
+<!-- 2-2. Видимо более приличный вариант -->
+<%= form_for([@article, @article.comments.build]) do |f| %>
+  <p>
+    <%= current_user.username %> <!-- username тк лэйбл к скрытому полю нафиг не нужен -->
+    <%= f.hidden_field :author, value: current_user.username %>
+    <!-- value: current_user.username - задаем значение поля с именем текущего пользователя -->
+    <!-- hidden_field - для скрытого поля -->
+    <!-- <input autocomplete="off" type="hidden" value="kroker" name="comment[author]" id="comment_author" /> -->
+  </p>
+  <p>
+    <%= f.label :body %>
+    <%= f.text_area :body %>
+  </p>
+  <p><%= f.submit %></p>
+<% end %>
+
 
 <!--                                           Вывод комментариев -->
 
@@ -38,9 +61,9 @@
 
 <!-- Комментарии тоже удобно выводить от связи @article.comments, не определяя в articles#show других переменных -->
 
-<!-- Пустой комментарий, созданный формой выше будет тоже содержаться в @article.comments, если вывод комментов будет располагаться ниже формы, потому если ниже нужно дописать костылей: -->
+<!-- Пустой комментарий, созданный формой выше будет тоже содержаться в @article.comments, если вывод комментов будет располагаться ниже формы, потому если он ниже как тут, то нужно дописать костылей, например: -->
 <!--
-'Пока еще нет комментариев' if @article.comments == 1
+'Пока еще нет комментариев' if @article.comments.size == 1
 Тк по счету он последний то можно сделать например
 @article.comments[0..-2].each do |comment|
 -->
