--- a/views/hq_barbershop_visit.erb
+++ b/views/hq_barbershop_visit.erb
@@ -18,7 +18,7 @@
 			<option <%= 'selected' if @barber == row.name %>><%=row.name%></option>
 
 			<!-- 2. Нативный вариант тоже работеат (??) -->
-      <!-- <option <%= 'selected' if @barber == row['name'] %>><%=row['name']%></option> -->
+      <option <%= 'selected' if @barber == row['name'] %>><%=row['name']%></option>
     <% end %>
   </select><br>
 
